memodump/css/memodump.css
/*
 * CSS for memodump theme for MoinMoin 1.9.x
 * Copyright 2014 dossist.
 * Based on Twitter Bootstrap 3.1.1.
 * Load after bootstrap css.
 */

/*=========================================================
   outbox
===========================================================*/

html, body {
    /* need this to use relative sizes in children */
    /* don't worry about contents longer than one screen height; they are just rendered properly */
    height: 100%;
    padding: 0;
    margin: 0;
}
#outbox {
    position: relative; /* child elements are relative to this */
    min-height: 100%;
    height: auto !important;
    width: 100%;
    padding-top: 51px; /* navbar height. 50px + 1px border */
    padding-bottom: 95px; /* footer height + pageinfo height */
}
/* sticky footer; sticks to the bottom of the screen as long as contents are less than 1 screen long */
#footer {
    position: relative; /* for z positioning */
    min-height: 60px; /* fixed (minimum) height */
    width: 100%;
    background-color: #f5f5f5;
    padding: 20px 0px;
}
#pageinfo-container {
    position: relative;
    height: 35px;
    width: 100%;
    margin-top: -95px; /* #footer + #pageinfo-container */
}

/*=========================================================
   navbar elements
===========================================================*/

/* search form customization: search icon inside input area */
input.form-search {
    padding-right: 24px;
    padding-left: 8px;
}
form.form-search {
    position: relative;
}
form.form-search:before {
    display: block;
    width: 14px;
    height: 14px;
    font-size: small;
    content: "\e003";
    font-family: 'Glyphicons Halflings';
    position: absolute;
    top: 9px;
    right: 8px;
    opacity: .5;
}
.navbar-form { /* Bootstrap bug? counter glitchy margins when uncollapsed in xs view */
    margin-left: 0;
    margin-right: 0;
}
@media screen and (min-width: 768px) { /* sm or above */
    /* truncate too long elements */
    .nav-maxwidth-100 {
        display: table-cell;
        max-width: 100px;
        overflow-x: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
    /* prevent navbar element from overflowing */
    .navbar .container {
        position: relative;
    }
    .navbar .navbar-collapse {
        position: absolute;
        right: 15px;
    }
}

/* Sidebar toggle button */
.sidebar-toggler {
    background-image: none;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 4px;
    float: left;
}
.sidebar-toggler:focus,
.sidebar-toggler:active:focus {
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}
.navbar-default .sidebar-toggler {
    color: #888;
    border-color: #ddd;
}
.navbar-default .sidebar-toggler:hover,
.navbar-default .sidebar-toggler:focus {
    background-color: #ddd;
}
.navbar-inverse .sidebar-toggler {
    color: #fff;
    border-color: #333;
}
.navbar-inverse .sidebar-toggler:hover,
.navbar-inverse .sidebar-toggler:focus {
    background-color: #333;
}
.navbar-brand-wrapper { /* workaround for webkit bug */
    float: left;
}
@media screen and (max-width: 767px) {
    .sidebar-toggler {
        margin-left: 15px;
    }
    /* workaround for webkit bug */
    .navbar-brand-wrapper {
        float: none;
        text-align: center;
    }
    .navbar-brand {
        float: none;
        display: inline-block;
    }
}
@media screen and (min-width: 992px) {
    .sidebar-toggler {
        display: none;
    }
}
@media screen and (min-width: 768px) and (max-width: 991px) {
    .navbar > .container .navbar-brand,
    .navbar > .container-fluid .navbar-brand {
        margin-left: 0px;
    }
}

/* navbar is no longer fixed for sideway view on smartphones */
@media screen and (max-width: 480px) and (orientation: landscape) {
    .navbar-fixed-top {
        position: absolute;
    }
}

/*=========================================================
   sidebar elements
===========================================================*/

/* taken from bootstrap to fit into wiki output (to enable styles without classes) */
#sidebar ul, #sidebar ol {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    line-height: 1;
    word-wrap: break-word;
}
#sidebar li { /* .nav > li */
    position: relative;
    display: block;
}
#sidebar li a { /* .nav > li > a */
    position: relative;
    display: block;
    padding: 10px 15px;
}
#sidebar li a:hover,
#sidebar li a:focus { /* .nav > li > a:* */
    text-decoration: none;
    background-color: #eee;
}
#sidebar li a img { /* .nav > li > a > img */
    max-width: none;
}

/* list style */
#sidebar ul, #sidebar ol {
    background-color: #f7f7f7;
    border-radius: 3px; /* box cornering */
}
/* workaround for cornering when hovered */
#sidebar div > ul > li:first-child,
#sidebar div > ol > li:first-child {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child,
#sidebar div > ol > li:last-child {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}
#sidebar div > ul > li:first-child > a:hover,
#sidebar div > ul > li:first-child > a:focus,
#sidebar div > ol > li:first-child > a:hover,
#sidebar div > ol > li:first-child > a:focus {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child > a:hover,
#sidebar div > ul > li:last-child > a:focus,
#sidebar div > ol > li:last-child > a:hover,
#sidebar div > ol > li:last-child > a:focus {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}

/* list padding */
#sidebar ul, #sidebar ol {
    padding: 0px 10px; /* whole list gets paddings on the left and the right */
}
#sidebar li {
    padding: 7px 0px; /* every list item gets paddings on top and bottom */
}
/* ... */

